// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/buildkite/extract extractPackageFile() adds skipReason 1`] = `
Array [
  Object {
    "currentValue": "v1.3.2.5",
    "depName": "namespace/docker-compose",
    "lineNumber": 4,
    "skipReason": "invalid-version",
  },
  Object {
    "currentValue": "v1.3.2",
    "depName": "https://github.com/buildkite/plugin-docker-compose",
    "lineNumber": 15,
    "skipReason": "git-plugin",
  },
  Object {
    "currentValue": "v1.3.2",
    "depName": "github.com/buildkite/plugin-docker-compose",
    "lineNumber": 22,
    "skipReason": "unknown",
  },
]
`;

exports[`lib/manager/buildkite/extract extractPackageFile() extracts arrays of plugins 1`] = `
Array [
  Object {
    "currentValue": "v2.0.1",
    "datasource": "github",
    "depName": "docker-login",
    "lineNumber": 2,
    "lookupName": "buildkite-plugins/docker-login-buildkite-plugin",
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v2.0.1",
    "datasource": "github",
    "depName": "docker-login",
    "lineNumber": 10,
    "lookupName": "buildkite-plugins/docker-login-buildkite-plugin",
    "skipReason": undefined,
  },
]
`;

exports[`lib/manager/buildkite/extract extractPackageFile() extracts multiple plugins in same file 1`] = `
Array [
  Object {
    "currentValue": "v1.3.2",
    "datasource": "github",
    "depName": "docker-compose",
    "lineNumber": 4,
    "lookupName": "buildkite-plugins/docker-compose-buildkite-plugin",
    "skipReason": undefined,
  },
  Object {
    "currentValue": "v1.3.2",
    "datasource": "github",
    "depName": "docker-compose",
    "lineNumber": 15,
    "lookupName": "buildkite-plugins/docker-compose-buildkite-plugin",
    "skipReason": undefined,
  },
]
`;

exports[`lib/manager/buildkite/extract extractPackageFile() extracts simple single plugin 1`] = `
Array [
  Object {
    "currentValue": "v2.0.0",
    "datasource": "github",
    "depName": "abc/detect-clowns",
    "lineNumber": 2,
    "lookupName": "abc/detect-clowns-buildkite-plugin",
    "skipReason": undefined,
  },
]
`;
